--- a/CaptionShare/Base.lproj/Main.storyboard
+++ b/CaptionShare/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gFZ-h6-5UV">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -15,10 +15,28 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
+                    <connections>
+                        <segue destination="j7H-zx-w8Y" kind="relationship" relationship="viewControllers" id="bka-G1-LlO"/>
+                        <segue destination="vGY-U1-rk5" kind="relationship" relationship="viewControllers" id="h9T-uX-pO5"/>
+                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lMF-W4-rZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1083" y="169"/>
+            <point key="canvasLocation" x="-1603" y="37"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="tvl-Bp-219">
+            <objects>
+                <navigationController id="j7H-zx-w8Y" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="nNJ-Sa-13d"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rct-zz-QKV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fl7-hx-Bhg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-731" y="-293"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -108,7 +126,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="429"/>
+            <point key="canvasLocation" x="-1155" y="1357"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Do6-lo-A7N">
+            <objects>
+                <navigationController id="vGY-U1-rk5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="L4N-Dc-vxB"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DQe-q5-LHu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ho-41-8yK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-575" y="694"/>
         </scene>
     </scenes>
 </document>
