--- a/CaptionShare/Base.lproj/Main.storyboard
+++ b/CaptionShare/Base.lproj/Main.storyboard
@@ -41,10 +41,10 @@
             </objects>
             <point key="canvasLocation" x="-1111" y="-269"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Caption Table View Controller-->
         <scene sceneID="GK1-Cm-V8b">
             <objects>
-                <tableViewController id="ZCy-h8-KVR" sceneMemberID="viewController">
+                <tableViewController id="ZCy-h8-KVR" customClass="CaptionTableViewController" customModule="CaptionShare" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="7tC-Au-npz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -70,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="-245" y="-286"/>
         </scene>
-        <!--View Controller-->
+        <!--Create Image View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CaptionShare" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateImage" id="BYZ-38-t0r" customClass="CreateImageViewController" customModule="CaptionShare" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -177,10 +177,10 @@
             </objects>
             <point key="canvasLocation" x="-1475" y="550"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Caption Collection View Controller-->
         <scene sceneID="NX9-ne-oZu">
             <objects>
-                <collectionViewController id="6Sk-4t-nrX" sceneMemberID="viewController">
+                <collectionViewController id="6Sk-4t-nrX" customClass="CaptionCollectionViewController" customModule="CaptionShare" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="sxQ-q3-QgA">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
