--- a/CaptionShare/Base.lproj/Main.storyboard
+++ b/CaptionShare/Base.lproj/Main.storyboard
@@ -232,17 +232,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FGb-u4-OWT">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="94" height="92"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="TvU-c5-aWV">
-                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="Cell" id="TvU-c5-aWV" customClass="CaptionCollectionViewCell" customModule="CaptionShare" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="94" height="92"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="94" height="92"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -254,6 +254,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="GGk-m5-ecE"/>
+                    <connections>
+                        <outlet property="captionCollectionView" destination="sxQ-q3-QgA" id="l7Z-Mj-1zQ"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EgU-L7-xKq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
